gitlab ssl changes

--- a/ansible/playbooks/role-gitlab-ee.yml
+++ b/ansible/playbooks/role-gitlab-ee.yml
@@ -28,6 +28,10 @@
         state: present
 
   roles:
+    - role: geerlingguy.certbot
+      state: present
+      when: not gitlab_create_self_signed_cert
+
     - role: geerlingguy.gitlab
       state: present
 
