--- a/ansible/playbooks/vars/gitlab.yml
+++ b/ansible/playbooks/vars/gitlab.yml
@@ -61,3 +61,8 @@ gitlab_nginx_listen_port: 8080
 gitlab_nginx_listen_https: "false"
 
 gitlab_default_theme: 2
+
+gitlab_external_db: false
+gitlab_external_db_host: db.rockylinux.org
+gitlab_external_db_user: gitlab
+gitlab_external_db_password: gitlab
