Add missing service account and privs

--- a/ansible/playbooks/vars/ipaprivs.yml
+++ b/ansible/playbooks/vars/ipaprivs.yml
@@ -26,3 +26,10 @@ iparoles:
       - "Netgroups Administrators"
     user:
       - hostman
+  - role: IPA User Managers
+    description: Rocky IPA User Managers responsible for idm flow
+    privileges:
+      - "Group Administrators"
+      - "Stage User Administrators"
+      - "User Administrators"
+      - "FAS Agreement Administrators"
