--- a/ansible/playbooks/vars/vaults/encpass.yml
+++ b/ansible/playbooks/vars/vaults/encpass.yml
@@ -10,6 +10,9 @@ ipaadmin_password: !vault |
 ipadm_password: !vault |
           $ANSIBLE_VAULT;1.1;AES256
           REDACTED
+ipa_binder_password: !vault |
+          $ANSIBLE_VAULT;1.1;AES256
+          REDACTED
 ipsilon_db_password: !vault |
           $ANSIBLE_VAULT;1.1;AES256
           REDACTED
