--- a/ansible/playbooks/init-rocky-ipa-team.yml
+++ b/ansible/playbooks/init-rocky-ipa-team.yml
@@ -5,12 +5,12 @@
   become: false
   gather_facts: false
   vars_files:
-  - vars/encpass.yml
-  - vars/users.yml
-  - vars/adminusers.yml
-  - vars/svcusers.yml
-  - vars/groups.yml
-  - vars/ipaprivs.yml
+  - vars/vaults/encpass.yml
+  - vars/ipa/users.yml
+  - vars/ipa/adminusers.yml
+  - vars/ipa/svcusers.yml
+  - vars/ipa/groups.yml
+  - vars/ipa/ipaprivs.yml
 
   tasks:
     - name: "Checking for user variables"
