--- a/ansible/playbooks/role-rocky-ipa-replica.yml
+++ b/ansible/playbooks/role-rocky-ipa-replica.yml
@@ -5,7 +5,7 @@
   hosts: ipareplicas
   become: true
   vars_files:
-  - vars/encpass.yml
+  - vars/vaults/encpass.yml
 
   # This is to try to avoid the handler issue in pre/post tasks
   handlers:
