--- a/ansible/playbooks/role-rocky-kojihub.yml
+++ b/ansible/playbooks/role-rocky-kojihub.yml
@@ -4,7 +4,7 @@
   hosts: kojihub
   become: true
   vars_files:
-  - vars/encpass.yml
+  - vars/vaults/encpass.yml
   - vars/kojihub.yml
 
   # This is to try to avoid the handler issue in pre/post tasks
