--- a/ansible/playbooks/role-rocky-mqtt.yml
+++ b/ansible/playbooks/role-rocky-mqtt.yml
@@ -4,7 +4,7 @@
   hosts: kojihub
   become: true
   vars_files:
-  - vars/encpass.yml
+  - vars/vaults/encpass.yml
   - vars/mqtt.yml
 
   # This is to try to avoid the handler issue in pre/post tasks
