--- a/ansible/playbooks/role-rocky-kojid.yml
+++ b/ansible/playbooks/role-rocky-kojid.yml
@@ -24,6 +24,19 @@
         success_msg: "We are able to run on this node"
         fail_msg: "/etc/no-ansible exists - skipping run on this node"
 
+    - name: Check for keytabs - kojid
+      stat:
+        path: /etc/kojid.keytab
+      register: kojid_keytab
+      changed_when: "1 != 1"
+
+    - name: Verify keytab
+      assert:
+        that:
+          - "kojid_keytab.stat.exists"
+        success_msg: "It is likely we have all keytabs"
+        fail_msg: "There are no keytabs. Please build the keytabs."
+
     # EPEL and PowerTools are required for ipsilon to function
     # I also couldn't find an ansible built-in to do this
     - name: Enable the PowerTools repository
