--- a/ansible/.gitignore
+++ b/ansible/.gitignore
@@ -9,3 +9,7 @@ roles/public/*
 #keep fodler holding ansible collections empty
 collections/*
 !README.md
+
+# Ignore all vaults
+vars/vaults/*
+!vars/vaults/README.md
