--- a/ansible/playbooks/adhoc-ipadns.yml
+++ b/ansible/playbooks/adhoc-ipadns.yml
@@ -14,6 +14,7 @@
     - name: "Checking for user variables"
       assert:
         that:
+          - ipa_admin | mandatory
           - ipaadmin_password | mandatory
           - ipa_zone | mandatory
         success_msg: "Required variables provided"
@@ -21,6 +22,7 @@
 
     - name: "Creating DNS Zone"
       freeipa.ansible_freeipa.ipadnszone:
+        ipaadmin_principal: "{{ ipa_admin }}"
         ipaadmin_password: "{{ ipaadmin_password }}"
         name: "{{ ipa_zone }}"
       tags:
