--- a/ansible/playbooks/vars/ipa/groups.yml
+++ b/ansible/playbooks/vars/ipa/groups.yml
@@ -52,6 +52,13 @@ ipagroups:
       - tg
       - hbjy
       - rockyautomation
+    managers_users:
+      - label
+      - neil
+      - rlh
+      - rfelsburg
+      - tg
+      - hbjy
   - group: services
     description: Rocky Linux Service Accounts
     user:
@@ -65,9 +72,13 @@ ipagroups:
     description: Rocky Linux Identity Management
     user:
       - label
+    managers_users:
+      - label
   - group: releng
     description: Rocky Linux Release Engineering
     user:
+      - label
+    managers_users:
       - label
   - group: mq_pub_readonly
     description: RabbitMQ ReadOnly
