--- a/ansible/playbooks/vars/ipa/ipaclient.yml
+++ b/ansible/playbooks/vars/ipa/ipaclient.yml
@@ -1,8 +1,10 @@
 ---
-
+# IPA Client Vars
 ipaclient_domain: rockylinux.org
 ipaclient_realm: ROCKYLINUX.ORG
 ipaadmin_principal: admin
 ipaclient_no_ntp: true
 ipaclient_mkhomedir: true
+ipaclient_ssh_trust_dns: true
+ipasssd_enable_dns_updates: true
 ipatype: client
