fixing other bits

--- a/ansible/inventories/production/hosts.ini
+++ b/ansible/inventories/production/hosts.ini
@@ -16,6 +16,7 @@ ipa001.rockylinux.org ansible_host=10.100.1.110
 
 [ipareplicas]
 ipa002.rockylinux.org ansible_host=10.100.1.111
+ipa003.rockylinux.org ansible_host=10.100.1.112
 
 [ipaclients]
 build-a-box.rockylinux.org ansible_host=10.100.1.112
@@ -60,3 +61,8 @@ ppc64le-03.boxbuild.rockylinux.org ansible_host=10.100.1.212
 
 [mqtt]
 mqtt.boxbuild.rockylinux.org ansible_host=10.100.1.213
+
+[rabbitmq]
+rabbitmq01.rockylinux.org ansible_host=10.100.1.214
+rabbitmq02.rockylinux.org ansible_host=10.100.1.215
+rabbitmq03.rockylinux.org ansible_host=10.100.1.216
