--- a/ansible/playbooks/import-rockyusers.yml
+++ b/ansible/playbooks/import-rockyusers.yml
@@ -8,7 +8,7 @@
     name: "{{ item.name }}"
     first: "{{ item.first }}"
     last: "{{ item.last }}"
-    email: "{{ item.email }}"
+    email: "{{ item.email|default(omit) }}"
     password: "{{ item.password }}"
     title: "{{ item.title }}"
     loginshell: "{{ item.loginshell }}"
@@ -23,7 +23,7 @@
     name: "{{ item.name }}"
     first: "{{ item.first }}"
     last: "{{ item.last }}"
-    email: "{{ item.email }}"
+    email: "{{ item.email|default(omit) }}"
     password: "{{ item.password }}"
     title: "{{ item.title }}"
     loginshell: "{{ item.loginshell }}"
@@ -38,7 +38,7 @@
     name: "{{ item.name }}"
     first: "{{ item.first }}"
     last: "{{ item.last }}"
-    email: "{{ item.email }}"
+    email: "{{ item.email|default(omit) }}"
     password: "{{ item.password }}"
     title: "{{ item.title }}"
     loginshell: "{{ item.loginshell }}"
