--- a/ansible/playbooks/role-rocky-ipsilon.yml
+++ b/ansible/playbooks/role-rocky-ipsilon.yml
@@ -62,6 +62,12 @@
       state: present
 
   post_tasks:
+    - name: Start and enable httpd
+      service:
+        name: httpd
+        state: running
+        enabled: true
+
     - name: Touching run file that ansible has ran here
       file:
         path: /var/log/ansible.run
