--- a/ansible/playbooks/handlers/main.yml
+++ b/ansible/playbooks/handlers/main.yml
@@ -32,3 +32,8 @@
   command: gitlab-ctl reconfigure
   register: gitlab_restart
   failed_when: gitlab_restart_handler_failed_when | bool
+
+- name: restart_noggin
+  service:
+    name: noggin
+    state: restarted
