--- a/ansible/inventories/production/hosts.ini
+++ b/ansible/inventories/production/hosts.ini
@@ -67,3 +67,13 @@ mqtt.boxbuild.rockylinux.org ansible_host=10.100.1.213
 rabbitmq01.rockylinux.org ansible_host=10.100.1.214
 rabbitmq02.rockylinux.org ansible_host=10.100.1.215
 rabbitmq03.rockylinux.org ansible_host=10.100.1.216
+
+[sigul:children]
+sigulbridge
+sigulserver
+
+[sigulbridge]
+sigul-bridge.rockylinux.org ansible_host=10.100.1.217
+
+[sigulserver]
+sigul-server.rockylinux.org ansible_host=10.100.1.218
