--- a/ansible/playbooks/adhoc-ipagetcert.yml
+++ b/ansible/playbooks/adhoc-ipagetcert.yml
@@ -20,9 +20,12 @@
         owner: "{{ getcert_owner|default(omit) }}"
         key_location: "{{ getcert_key|default(omit) }}"
         cert_location: "{{ getcert_cert|default(omit) }}"
+        nss_db_dir: "{{ getcert_nss_db_dir|default(omit) }}"
+        nss_nickname: "{{ getcert_nss_nickname|default(ansible_fqdn) }}"
         postcmd: "{{ getcert_postcmd|default(omit) }}"
     ipa_getcert_chain: "{{ getcert_chain|default(omit) }}"
     ipa_getcert_chain_location: "{{ getcert_chain_location|default(omit) }}"
+    ipa_getcert_nss: "{{ getcert_nss|default(false) }}"
 
   roles:
     - role: rockylinux.ipagetcert
