--- a/ansible/playbooks/role-rocky-kojid.yml
+++ b/ansible/playbooks/role-rocky-kojid.yml
@@ -5,6 +5,7 @@
   become: true
   vars_files:
   - vars/vaults/encpass.yml
+  - vars/common.yml
   - vars/kojid.yml
 
   # This is to try to avoid the handler issue in pre/post tasks
