--- a/ansible/playbooks/vars/common.yml
+++ b/ansible/playbooks/vars/common.yml
@@ -1,4 +1,5 @@
 ---
+rocky_ipa_realm: "ROCKYLINUX.ORG"
 rocky_ldap_bind_dn: "uid=binder,cn=sysaccounts,cn=etc,dc=rockylinux,dc=org"
 rocky_ldap_user_basedn: "cn=users,cn=accounts,dc=rockylinux,dc=org"
 rocky_ldap_group_basedn: "cn=groups,cn=accounts,dc=rockylinux,dc=org"
