--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -67,3 +67,10 @@ log_path		= tmp/ansible.log
 known_hosts     = tmp/known_hosts
 roles_path		= roles/local:roles/public
 collections_paths = collections
+
+########################################
+# SSH Configuration
+########################################
+[ssh_connection]
+# Disable GSSAPI, which slows down SSH connections for ansible
+ssh_args = -C -o ControlMaster=auto -o ControlPersist=60s -o GSSAPIAuthentication=no
