--- a/ansible/playbooks/tasks/mantis.yml
+++ b/ansible/playbooks/tasks/mantis.yml
@@ -1,7 +1,7 @@
 ---
 # Configure mantis
 - name: Configure SELinux booleans
-  seboolean:
+  ansible.posix.seboolean:
     name: "{{ item }}"
     persistent: true
     state: true
