--- a/ansible/playbooks/adhoc-ipadnszone.yml
+++ b/ansible/playbooks/adhoc-ipadnszone.yml
@@ -8,7 +8,7 @@
   become: false
   gather_facts: false
   vars_files:
-  - vars/vaults/encpass.yml
+  - vars/vaults/hostman.yml
 
   tasks:
     - name: "Checking for user variables"
