--- a/ansible/playbooks/adhoc-ipagetkeytab.yml
+++ b/ansible/playbooks/adhoc-ipagetkeytab.yml
@@ -18,12 +18,13 @@
   become: true
   gather_facts: false
   vars_files:
-    - vars/vaults/encpass.yml
+    - vars/vaults/kerbman.yml
 
   tasks:
     - name: "Checking for user variables"
       assert:
         that:
+          - ipa_admin | mandatory
           - ipaadmin_password | mandatory
           - ipa_service | mandatory
           - ipa_keytab_fullpath | mandatory
