--- a/ansible/playbooks/adhoc-ipauser.yml
+++ b/ansible/playbooks/adhoc-ipauser.yml
@@ -7,7 +7,7 @@
   become: false
   gather_facts: false
   vars_files:
-  - vars/vaults/encpass.yml
+  - vars/vaults/userman.yml
 
   tasks:
     - name: "Checking for user variables"
