--- a/ansible/playbooks/vars/gitlab.yml
+++ b/ansible/playbooks/vars/gitlab.yml
@@ -29,7 +29,7 @@ gitlab_ldap_bind_dn: "{{ rocky_ldap_bind_dn }}"
 gitlab_ldap_password: "{{ rocky_ldap_bind_pw }}"
 gitlab_ldap_base: "{{ rocky_ldap_user_basedn }}"
 gitlab_ldap_group_dn: "{{ rocky_ldap_group_basedn }}"
-gitlab_ldap_admin_group: "cn=gitadm,cn=groups,cn=accounts,dc=rockylinux,dc=org"
+gitlab_ldap_admin_group: "gitadm"
 gitlab_ldap_user_filter: "(&(objectClass=posixAccount)(memberOf=cn=gitusers,cn=groups,cn=accounts,dc=rockylinux,dc=org))"
 
 gitlab_time_zone: "UTC"
